--- a/Project/DirectXGame.vcxproj
+++ b/Project/DirectXGame.vcxproj
@@ -552,6 +552,22 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="Game\Objects\Player\Input\Device\PlayerGamePadInput.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="Game\Objects\Player\Input\Device\PlayerKeyInput.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="Game\Objects\Player\Input\Interface\PlayerIInputDevice.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="Game\Objects\Player\Input\PlayerInputMapper.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="Game\Objects\Player\State\Interface\PlayerIState.cpp">
       <SubType>
       </SubType>
@@ -573,6 +589,10 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClCompile Include="Game\Objects\Player\State\States\PlayerSkilAttackState.cpp" />
     <ClCompile Include="Game\Objects\Player\State\States\PlayerSpecialAttackState.cpp" />
     <ClCompile Include="Game\Objects\Player\State\States\PlayerWalkState.cpp" />
+    <ClCompile Include="Game\Objects\Player\Structures\PlayerStructures.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="Game\Objects\SceneTransition\FadeTransition.cpp" />
     <ClCompile Include="Game\Scene\GameScene.cpp">
       <SubType>
@@ -999,6 +1019,26 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
       </SubType>
     </ClInclude>
     <ClInclude Include="Game\Objects\Player\HUD\PlayerHUD.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="Game\Objects\Player\Input\Device\PlayerGamePadInput.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="Game\Objects\Player\Input\Interface\PlayerIInputDevice.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="Game\Objects\Player\Input\PlayerInputMapper.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="Game\Objects\Player\Input\Device\PlayerKeyInput.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="Game\Objects\Player\Input\Structures\PlayerAction.h">
       <SubType>
       </SubType>
     </ClInclude>
