--- a/Project/DirectXGame.vcxproj.filters
+++ b/Project/DirectXGame.vcxproj.filters
@@ -488,6 +488,21 @@
     <ClCompile Include="Game\Objects\Player\State\States\PlayerDashState.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Game\Objects\Player\Input\Interface\PlayerIInputDevice.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="Game\Objects\Player\Input\PlayerInputMapper.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="Game\Objects\Player\Structures\PlayerStructures.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="Game\Objects\Player\Input\Device\PlayerKeyInput.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="Game\Objects\Player\Input\Device\PlayerGamePadInput.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Asset\AnimationManager.h" />
@@ -664,6 +679,11 @@
     <ClInclude Include="Game\Objects\Player\State\States\PlayerAttack_3rdState.h" />
     <ClInclude Include="Game\Objects\Player\State\States\PlayerDashAttackState.h" />
     <ClInclude Include="Game\Objects\Player\State\States\PlayerWalkState.h" />
+    <ClInclude Include="Game\Objects\Player\Input\Interface\PlayerIInputDevice.h" />
+    <ClInclude Include="Game\Objects\Player\Input\Structures\PlayerAction.h" />
+    <ClInclude Include="Game\Objects\Player\Input\PlayerInputMapper.h" />
+    <ClInclude Include="Game\Objects\Player\Input\Device\PlayerKeyInput.h" />
+    <ClInclude Include="Game\Objects\Player\Input\Device\PlayerGamePadInput.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Engine\Shaders\MS\Triangle.MS.hlsl" />
