--- a/Project/DirectXGame.vcxproj.filters
+++ b/Project/DirectXGame.vcxproj.filters
@@ -500,6 +500,9 @@
     <ClCompile Include="Game\Objects\Player\Input\Device\PlayerGamePadInput.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Game\Objects\Player\State\Interface\PlayerBaseAttackState.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Asset\AnimationManager.h" />
@@ -680,6 +683,7 @@
     <ClInclude Include="Game\Objects\Player\Input\PlayerInputMapper.h" />
     <ClInclude Include="Game\Objects\Player\Input\Device\PlayerKeyInput.h" />
     <ClInclude Include="Game\Objects\Player\Input\Device\PlayerGamePadInput.h" />
+    <ClInclude Include="Game\Objects\Player\State\Interface\PlayerBaseAttackState.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Engine\Shaders\MS\Triangle.MS.hlsl" />
