--- a/Project/DirectXGame.vcxproj.filters
+++ b/Project/DirectXGame.vcxproj.filters
@@ -503,6 +503,9 @@
     <ClCompile Include="Game\Objects\Player\State\Interface\PlayerBaseAttackState.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Game\Objects\Player\Entity\PlayerWeapon.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Asset\AnimationManager.h" />
@@ -684,6 +687,7 @@
     <ClInclude Include="Game\Objects\Player\Input\Device\PlayerKeyInput.h" />
     <ClInclude Include="Game\Objects\Player\Input\Device\PlayerGamePadInput.h" />
     <ClInclude Include="Game\Objects\Player\State\Interface\PlayerBaseAttackState.h" />
+    <ClInclude Include="Game\Objects\Player\Entity\PlayerWeapon.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Engine\Shaders\MS\Triangle.MS.hlsl" />
