--- a/Project/DirectXGame.vcxproj.filters
+++ b/Project/DirectXGame.vcxproj.filters
@@ -509,6 +509,9 @@
     <ClCompile Include="Lib\MathUtils\MathUtils.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Game\Objects\Player\Collision\PlayerAttackCollision.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Asset\AnimationManager.h" />
@@ -691,6 +694,7 @@
     <ClInclude Include="Game\Objects\Player\Input\Device\PlayerGamePadInput.h" />
     <ClInclude Include="Game\Objects\Player\State\Interface\PlayerBaseAttackState.h" />
     <ClInclude Include="Game\Objects\Player\Entity\PlayerWeapon.h" />
+    <ClInclude Include="Game\Objects\Player\Collision\PlayerAttackCollision.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Engine\Shaders\MS\Triangle.MS.hlsl" />
