--- a/Project/DirectXGame.vcxproj.filters
+++ b/Project/DirectXGame.vcxproj.filters
@@ -512,6 +512,9 @@
     <ClCompile Include="Game\Objects\Player\Collision\PlayerAttackCollision.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Game\Objects\Result\GameResult.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Asset\AnimationManager.h" />
@@ -695,6 +698,7 @@
     <ClInclude Include="Game\Objects\Player\State\Interface\PlayerBaseAttackState.h" />
     <ClInclude Include="Game\Objects\Player\Entity\PlayerWeapon.h" />
     <ClInclude Include="Game\Objects\Player\Collision\PlayerAttackCollision.h" />
+    <ClInclude Include="Game\Objects\Result\GameResult.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Engine\Shaders\MS\Triangle.MS.hlsl" />
