--- a/Project/DirectXGame.vcxproj.filters
+++ b/Project/DirectXGame.vcxproj.filters
@@ -515,6 +515,9 @@
     <ClCompile Include="Game\Objects\Result\GameResult.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Game\Objects\Base\GameDisplayDamage.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Asset\AnimationManager.h" />
@@ -699,6 +702,7 @@
     <ClInclude Include="Game\Objects\Player\Entity\PlayerWeapon.h" />
     <ClInclude Include="Game\Objects\Player\Collision\PlayerAttackCollision.h" />
     <ClInclude Include="Game\Objects\Result\GameResult.h" />
+    <ClInclude Include="Game\Objects\Base\GameDisplayDamage.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Engine\Shaders\MS\Triangle.MS.hlsl" />
