--- a/Project/DirectXGame.vcxproj.filters
+++ b/Project/DirectXGame.vcxproj.filters
@@ -548,6 +548,12 @@
     <ClCompile Include="Game\Camera\Follow\State\States\FollowCameraShakeState.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Game\Objects\Player\State\States\PlayerSwitchAllyState.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="Game\Objects\Player\State\States\PlayerStunAttackState.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Asset\AnimationManager.h" />
@@ -746,6 +752,8 @@
     <ClInclude Include="Game\Camera\Follow\Input\Device\FollowCameraKeyInput.h" />
     <ClInclude Include="Game\Camera\Follow\Input\Device\FollowCameraGamePadInput.h" />
     <ClInclude Include="Game\Camera\Follow\State\States\FollowCameraShakeState.h" />
+    <ClInclude Include="Game\Objects\Player\State\States\PlayerSwitchAllyState.h" />
+    <ClInclude Include="Game\Objects\Player\State\States\PlayerStunAttackState.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Engine\Shaders\MS\Triangle.MS.hlsl" />
