--- a/Project/DirectXGame.vcxproj.filters
+++ b/Project/DirectXGame.vcxproj.filters
@@ -554,6 +554,12 @@
     <ClCompile Include="Game\Objects\Player\State\States\PlayerStunAttackState.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Game\Objects\Player\HUD\PlayerStunHUD.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="Game\Objects\Base\GameTimerDisplay.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Asset\AnimationManager.h" />
@@ -754,6 +760,8 @@
     <ClInclude Include="Game\Camera\Follow\State\States\FollowCameraShakeState.h" />
     <ClInclude Include="Game\Objects\Player\State\States\PlayerSwitchAllyState.h" />
     <ClInclude Include="Game\Objects\Player\State\States\PlayerStunAttackState.h" />
+    <ClInclude Include="Game\Objects\Player\HUD\PlayerStunHUD.h" />
+    <ClInclude Include="Game\Objects\Base\GameTimerDisplay.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Engine\Shaders\MS\Triangle.MS.hlsl" />
