--- a/Project/DirectXGame.vcxproj.filters
+++ b/Project/DirectXGame.vcxproj.filters
@@ -560,6 +560,12 @@
     <ClCompile Include="Game\Objects\Base\GameTimerDisplay.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Game\Camera\Follow\State\Interface\FollowCameraIState.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="Game\Camera\Follow\State\States\FollowCameraAllyAttackState.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Asset\AnimationManager.h" />
@@ -762,6 +768,7 @@
     <ClInclude Include="Game\Objects\Player\State\States\PlayerStunAttackState.h" />
     <ClInclude Include="Game\Objects\Player\HUD\PlayerStunHUD.h" />
     <ClInclude Include="Game\Objects\Base\GameTimerDisplay.h" />
+    <ClInclude Include="Game\Camera\Follow\State\States\FollowCameraAllyAttackState.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Engine\Shaders\MS\Triangle.MS.hlsl" />
