--- a/Project/imgui.ini
+++ b/Project/imgui.ini
@@ -22,9 +22,9 @@ Collapsed=0
 
 [Window][Game]
 Pos=0,0
-Size=855,528
+Size=855,1061
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x0000000A,0
 
 [Window][Debug]
 Pos=328,0
@@ -51,10 +51,9 @@ Collapsed=0
 DockId=0x00000018,0
 
 [Window][Scene]
-Pos=0,530
-Size=855,531
+Pos=3,539
+Size=848,532
 Collapsed=0
-DockId=0x00000009,0
 
 [Window][Project]
 Pos=605,544
@@ -361,9 +360,7 @@ DockSpace             ID=0x11111111 Window=0x1BBC0F80 Pos=0,0 Size=1920,1061 Spl
     DockNode          ID=0x00000004 Parent=0x0000000C SizeRef=880,810 Split=Y
       DockNode        ID=0x00000005 Parent=0x00000004 SizeRef=1920,39 Selected=0x9EBFE3AB
       DockNode        ID=0x00000006 Parent=0x00000004 SizeRef=1920,1039 Split=X Selected=0xF0D94A78
-        DockNode      ID=0x0000000A Parent=0x00000006 SizeRef=855,490 Split=Y Selected=0xE601B12F
-          DockNode    ID=0x00000008 Parent=0x0000000A SizeRef=994,537 Selected=0xD1EB2482
-          DockNode    ID=0x00000009 Parent=0x0000000A SizeRef=994,541 Selected=0xE601B12F
+        DockNode      ID=0x0000000A Parent=0x00000006 SizeRef=855,490 Selected=0xD1EB2482
         DockNode      ID=0x0000000B Parent=0x00000006 SizeRef=1063,490 Split=Y Selected=0x36DC96AB
           DockNode    ID=0x0000000E Parent=0x0000000B SizeRef=1064,861 Split=X Selected=0x36DC96AB
             DockNode  ID=0x00000017 Parent=0x0000000E SizeRef=273,769 Selected=0xBABDAE5E
