--- a/Project/DirectXGame.vcxproj.filters
+++ b/Project/DirectXGame.vcxproj.filters
@@ -563,6 +563,9 @@
     <ClCompile Include="Game\Objects\Enemy\Boss\Collision\BossEnemyBladeCollision.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Game\Objects\Player\State\States\PlayerAvoidSatate.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Asset\AnimationManager.h" />
@@ -765,6 +768,7 @@
     <ClInclude Include="Game\Objects\Base\GameTimerDisplay.h" />
     <ClInclude Include="Game\Camera\Follow\State\States\FollowCameraAllyAttackState.h" />
     <ClInclude Include="Game\Objects\Enemy\Boss\Collision\BossEnemyBladeCollision.h" />
+    <ClInclude Include="Game\Objects\Player\State\States\PlayerAvoidSatate.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Engine\Shaders\MS\Triangle.MS.hlsl" />
