敵の攻撃判定追加

--- a/Project/DirectXGame.vcxproj
+++ b/Project/DirectXGame.vcxproj
@@ -578,6 +578,10 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="Game\Objects\Enemy\Boss\Collision\BossEnemyAttackCollision.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="Game\Objects\Enemy\Boss\Collision\BossEnemyBladeCollision.cpp">
       <SubType>
       </SubType>
@@ -1152,6 +1156,10 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
       </SubType>
     </ClInclude>
     <ClInclude Include="Game\Objects\Base\ITransition.h" />
+    <ClInclude Include="Game\Objects\Enemy\Boss\Collision\BossEnemyAttackCollision.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="Game\Objects\Enemy\Boss\Collision\BossEnemyBladeCollision.h">
       <SubType>
       </SubType>
