--- a/Project/DirectXGame.vcxproj.filters
+++ b/Project/DirectXGame.vcxproj.filters
@@ -566,6 +566,9 @@
     <ClCompile Include="Game\Objects\Player\State\States\PlayerAvoidSatate.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Game\Objects\Enemy\Boss\Collision\BossEnemyAttackCollision.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Asset\AnimationManager.h" />
@@ -769,6 +772,7 @@
     <ClInclude Include="Game\Camera\Follow\State\States\FollowCameraAllyAttackState.h" />
     <ClInclude Include="Game\Objects\Enemy\Boss\Collision\BossEnemyBladeCollision.h" />
     <ClInclude Include="Game\Objects\Player\State\States\PlayerAvoidSatate.h" />
+    <ClInclude Include="Game\Objects\Enemy\Boss\Collision\BossEnemyAttackCollision.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Engine\Shaders\MS\Triangle.MS.hlsl" />
