--- a/Project/DirectXGame.vcxproj.filters
+++ b/Project/DirectXGame.vcxproj.filters
@@ -572,6 +572,9 @@
     <ClCompile Include="Game\Camera\Follow\State\States\FollowCameraParryState.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Game\Camera\Follow\State\States\FollowCameraParryAttackState.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Asset\AnimationManager.h" />
@@ -777,6 +780,7 @@
     <ClInclude Include="Game\Objects\Player\State\States\PlayerAvoidSatate.h" />
     <ClInclude Include="Game\Objects\Enemy\Boss\Collision\BossEnemyAttackCollision.h" />
     <ClInclude Include="Game\Camera\Follow\State\States\FollowCameraParryState.h" />
+    <ClInclude Include="Game\Camera\Follow\State\States\FollowCameraParryAttackState.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Engine\Shaders\MS\Triangle.MS.hlsl" />
